--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,8 +1,6 @@
 <div class="ui inverted small menu">
   <div class="ui container">
-    <a class="active item">
-      Home
-    </a>
+    <%= link_to "Chatroom", root_path, class: 'active item' %>
     <a class="item">
       Messages
     </a>
@@ -10,7 +8,7 @@
       <div class="ui dropdown item">
         Account <i class="dropdown icon"></i>
         <div class="menu">
-          <a class="item">English</a>
+          <%= link_to "Login", login_path, class: 'item' %>
           <a class="item">Russian</a>
           <a class="item">Spanish</a>
         </div>
