--- a/app/views/chatroom/home.html.erb
+++ b/app/views/chatroom/home.html.erb
@@ -1,1 +1,9 @@
-<h4>You have reached the root route</h4>
+<%= render 'header' %>
+<div class="ui grid">
+  <div class="twelve wide column">
+    <%= render 'chatbox' %>
+  </div>
+  <div class="four wide column">
+    <%= render 'rightmenu' %>
+  </div>
+</div>
